[gd_scene load_steps=3 format=3 uid="uid://b0vk5n8h1ydji"]

[ext_resource type="Script" path="res://scenes/confirmation_modal.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://ckorw5avm0nr4" path="res://themes/DarkMode.res" id="2_theme"]
[ext_resource type="StyleBox" uid="uid://rroywssaded8" path="res://materials/panel_style_box_flat.tres" id="3_panel"]

[node name="ConfirmationModal" type="CanvasLayer"]
layer = 15
visible = false
script = ExtResource("1_script")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = ExtResource("3_panel")

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="QuestionLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 14
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Margin" type="MarginContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ButtonBox" type="HBoxContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="YesButton" type="Button" parent="Overlay/CenterContainer/PanelContainer/VBox/ButtonBox"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
theme = ExtResource("2_theme")
text = "Yes"

[node name="Spacer" type="Control" parent="Overlay/CenterContainer/PanelContainer/VBox/ButtonBox"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="NoButton" type="Button" parent="Overlay/CenterContainer/PanelContainer/VBox/ButtonBox"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
theme = ExtResource("2_theme")
text = "No"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = false
autostart = false
